--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,6 +9,10 @@ html {
     font-size: 62.5%;
 }
 
+* {
+    box-sizing: 62.5%;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 1.6rem;
