--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,10 @@
 
 :root {
     --primary: #fe2c55;
+
+    --default-layout-header-height: 60px;
+    --default-layout-width-content: 1150px;
+
 }
 
 html {
@@ -10,6 +14,8 @@ html {
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: 62.5%;
 }
 
