--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -9,4 +9,28 @@
 .inner{
     height: 100%;
     width: var(--default-layout-width-content);
+    display: flex;
+    align-items: center;
+}
+.wrapper{
+    display: flex;
+
+}
+.inner{
+
+}
+.logo{
+
+}
+.search{
+
+}
+.clear{
+
+}
+.loading{
+
+}
+.search-btn{
+
 }
